--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Hello world</h1>
-		<h1>welcom to this page<h1>
+		<h1>welcom to our page<h1>
         <p>hiiiii</p>
     </body>
 </html>
